...
            child: const Icon(Icons.upload_file),
          ),
          SizedBox(
            width: 8,
          ),
          FloatingActionButton.extended(
            key: const Key('create-pack-button'),
            heroTag: "create_fab",
            backgroundColor: Theme.of(context).colorScheme.primary,
            onPressed: () async {
              final pack = await showDialog<StickerPack>(
                context: context,
                builder: (_) => const CreatePackDialog(),
...
